# haskell-platformer

./: Project.cabal  README.md  stack.yaml
src/: GameObjects.hs  Graphics.hs  HighScore.hs  Input.hs  Main.hs
