cabal-version: 1.12

name:           Project
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/Project#readme>
homepage:       https://github.com/MisterSadness/Project#readme
author:         Piotr Lewandowski
copyright:      2020 Piotr Lewandowski
license:        BSD3
license-file:   LICENSE
build-type:     Simple
category:       Game

executable game
  main-is: Main.hs
  other-modules:
      Graphics, GameObjects, Input, HighScore
  other-extensions:    
      Arrows
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
     base >=4.7 && <5
    , sdl2 >=2.5
    , Yampa >=0.13
    , text
    , colour
    , lens >=4.19
    , directory
  default-language: Haskell2010
